# Mardas-MD2PDF

./: .gitignore  CHANGELOG.md  GUIDE.en.md  GUIDE.fa.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  xv6_lab2_report.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: APPEARANCE.md  BRANDING.md  CHANGELOG.md  DOCUMENTATION.md  MAINTENANCE.md  MARKDOWN-FIDELITY.md  PDF-NAVIGATION.md  PDF-TYPOGRAPHY.md  PERSIAN-RTL.md  README.md  RELEASE.md  SECURITY.md  STUDIO.md  VISUAL-QA.md
docs/guides/: GUIDE.en.md  GUIDE.fa.md  GUIDE.references.bib
examples/: en-lang-math-demo.md  fa-en-math-code-textbook.html  fa-en-math-code.html  fa-en-math-code.md
scripts/: audit_appearance_matrix.py  audit_pdf_features.py  audit_studio_visual.py  benchmark_large_documents.py  build_dist.sh  build_examples.sh  build_offline_bundle.py  check.sh  check_pdf_preflight.py  clean_workspace.sh  compare_visual_snapshots.py  cross_platform_smoke.py  finalize_release_artifacts.py  generate_sbom.py  normalize_sdist.py  release_gate.sh  release_provenance.py  render_smoke.py  run_visual_qa_matrix.py  visual_qa.py
src/: __init__.py  appearance.py  cli.py  gui.py  markdown.py  mermaid.py  renderer.py
src/assets/: gui.html  style-academic.css  style-github.css  style-textbook-dark.css  style-textbook-light.css  theme-academic.css  theme-github.css  theme-modern.css  theme-textbook-dark.css  theme-textbook-light.css
src/assets/mathjax/: NOTICE.md
src/mardas_md2pdf/: __init__.py  accessibility.py  appearance.py  book.py  brand_assets.py  citations.py  cli.py  config.py  diagnostics.py  gui.py  markdown.py  mermaid.py  pdf_audit.py  project_commands.py  references.py  render_pool.py  renderer.py  studio_jobs.py  workspace.py
src/mardas_md2pdf/assets/: gui.html  style-academic.css  style-github.css  style-modern.css  style-textbook.css  theme-academic.css  theme-textbook-dark.css  theme-textbook-light.css  theme-textbook.css  theme.css
src/md2pdf_pro/: __init__.py  cli.py  markdown.py  renderer.py
src/md2pdf_pro/assets/: theme-textbook.css  theme.css
tests/: test_accessibility_audit.py  test_book_mode.py  test_brand_assets.py  test_citations.py  test_cross_references.py  test_documentation_integrity.py  test_gui_assets.py  test_markdown.py  test_markdown_feature_completeness.py  test_pdf_accessibility_audit.py  test_pdf_output.py  test_pdf_preflight.py  test_pdf_print_typography.py  test_pdf_toc_destinations.py  test_performance_benchmark.py  test_performance_reliability.py  test_persian_rtl_quality.py  test_phase11_visual_audit.py  test_progress.py  test_project_config.py  test_release_metadata.py  test_release_provenance.py  test_renderer_options.py  test_security_boundaries.py  test_studio_export_jobs.py  test_studio_project_workspace.py  test_studio_sidebar_layout.py  test_style_css.py  test_system_hardening.py  test_theme_css.py  test_user_input_quality.py  test_visual_qa_scripts.py
