[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mardas-md2pdf"
version = "1.13.12"
description = "Persian/English Markdown to PDF converter with RTL/LTR typography, diagrams, MathJax, appearance presets, GUI workflow, and PDF-ready documentation features."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "mragetsars", email = "mragetsars@gmail.com" }
]
keywords = ["markdown", "pdf", "gfm", "github", "rtl", "persian", "mathjax", "mermaid", "pygments", "playwright", "gui"]
dependencies = [
  "markdown-it-py>=3.0.0",
  "pygments>=2.17.0",
  "beautifulsoup4>=4.12.0",
  "playwright>=1.45.0",
  "PyYAML>=6.0.0",
  "pypdf>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "build>=1.2.0"
]

[project.scripts]
mrs-md2pdf = "mardas_md2pdf.cli:main"
mrs-md2pdf-gui = "mardas_md2pdf.gui:main"

[tool.setuptools]
packages = ["mardas_md2pdf", "mardas_md2pdf.assets", "mardas_md2pdf.assets.mathjax"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
mardas_md2pdf = [
  "assets/*.css",
  "assets/*.png",
  "assets/*.svg",
  "assets/*.html",
  "assets/mathjax/*"
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
